# project-starters

./: .gitignore  README.md  lefthook.yml
.github/workflows/: go-ci.yml  typescript-ci.yml
go/: .dockerignore  .golangci.yml  Dockerfile  README.md  go.mod
go/cmd/my-app/: main.go  main_test.go
go/internal/my-module/: module.go  module_test.go
go/pkg/my-package/: package.go  package_test.go
python/: pyproject.toml
python/src/my_package/: main.py
python/tests/: test_main.py
typescript/: README.md  biome.json  package.json  pnpm-lock.yaml  tsconfig.build.json  tsconfig.json
typescript/src/: cli.ts  main.ts
typescript/tests/: main.test.ts
