[project]
name = "my_package"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pyright[nodejs]>=1.1.408",
    "pytest>=8.4.2",
    "ruff>=0.15.4",
]

[tool.ruff]
line-length = 120
fix = true
exclude = [
    ".venv",
    "libs",
]

[tool.ruff.lint]
# select all rules except the ones that conflict with others rules or formatters.
select = ["ALL"]
ignore = [
    "D203", # incorrect-blank-line-before-class, conflicts with D211
    "D213", # multi-line-summary-second-line, conflicts with D212
    "COM812", # missing-trailing-comma, conflicts with formatters
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101", # allow assert in pytest tests
]

[tool.pyright]
typeCheckingMode = "strict"
